Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
     configuration: 'Release'
     xcodeVersion: 'default' # Options: 8, 9, default, specifyPath
     exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
-    packageApp: true
+    packageApp: false
 - task: CopyFiles@2
   inputs:
     contents: '**/*.ipa'
@@ -26,4 +26,4 @@ steps:
     script: |
       # Write your commands here
       
-      echo 'Hello world'
+      echo 'Hello world,hahaha'
